# data-compression

./: .gitignore  README.md  install_data_compression.sh  pyproject.toml  requirements.txt  santis.run
docs/: data_compression_slides.html  index.html  slides.md
src/data_compression_cscs_exclaim/: cli.py  compression_analysis_ui.py  compression_analysis_ui_local.py  compression_analysis_ui_web.py  utils.py
src/dc_toolkit/: cli.py  compression_analysis_ui_local.py  compression_analysis_ui_santis.py  compression_analysis_ui_web.py  utils.py
