[build-system]
requires = ["setuptools", "wheel"]

[project]
authors = [
    {name = 'Christos Kotsalos', email = 'christos.kotsalos@cscs.ch'},
    {name = 'Nicoletta Farabullini', email = 'nicoletta.farabullini@c2sm.ethz.ch'},
]
dependencies = [
    "click",
    "pyyaml",
    "numpy",
    "xarray",
    "humanize",
    "streamlit",
    "tslearn",
    "scipy",
    "PyWavelets",
    "dask[complete]",
    "h5py",
    "zarr >=3.0.10",
    "numcodecs",
    "zarr-any-numcodecs >=0.1.3",
    "json5",
    "rich",
    "zfpy",
    "pcodec",
    "tqdm",
    "matplotlib",
    "netCDF4",
    "h5netcdf",
    "plotly",
    "numcodecs_wasm",
    "numcodecs_combinators",
    "numcodecs_observers",
    "numcodecs_wasm_asinh",
    "numcodecs_wasm_bit_round",
    "numcodecs_wasm_fixed_offset_scale",
    "numcodecs_wasm_identity",
    "numcodecs_wasm_linear_quantize",
    "numcodecs_wasm_log",
    "numcodecs_wasm_round",
    "numcodecs_wasm_swizzle_reshape",
    "numcodecs_wasm_uniform_noise",
    "numcodecs_wasm_zlib",
    "numcodecs_wasm_zstd",
    "numcodecs_wasm_pco",
    "numcodecs_wasm_sperr",
    "numcodecs_wasm_sz3",
    "numcodecs_wasm_zfp",
]
description = 'Data compression tool for Weather and Climate data'
name = 'data_compression_cscs_exclaim'
readme = {file = 'README.md', content-type = 'text/markdown'}
requires-python = '>=3.11'
version = '0.0'

[project.scripts]
data_compression_cscs_exclaim = 'data_compression_cscs_exclaim.cli:cli'
model_eval_cscs_exclaim = 'model_eval_cscs_exclaim.cli:cli'

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
